// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expression compiler async functions 1`] = `
"async function anonymous(getValue,fns
) {
// =WAIT(5)
let _1 = await fns['WAIT'](5)
return _1;
}"
`;

exports[`expression compiler cells are converted to ranges if function require a range 1`] = `
"function anonymous(getValue,fns
) {
// =sum(A1)
let _2 = getValue('A1')
let _1 = fns['SUM']([[_2]])
return _1;
}"
`;

exports[`expression compiler expression with $ref 1`] = `
"function anonymous(getValue,fns
) {
// =$A1+$A$2+A$3
let _3 = getValue('A1')
let _4 = getValue('A2')
let _2 = fns['ADD'](_3, _4)
let _5 = getValue('A3')
let _1 = fns['ADD'](_2, _5)
return _1;
}"
`;

exports[`expression compiler expressions with a debugger 1`] = `
"function anonymous(getValue,fns
) {
// =? A1 / 2
debugger;
let _2 = getValue('A1')
let _1 = fns['DIVIDE'](_2, 2)
return _1;
}"
`;

exports[`expression compiler function call 1`] = `
"function anonymous(getValue,fns
) {
// =sum(1,2)
let _1 = fns['SUM'](1,2)
return _1;
}"
`;

exports[`expression compiler function call 2`] = `
"function anonymous(getValue,fns
) {
// =sum(true, \\"\\")
let _1 = fns['SUM'](true,\\"\\")
return _1;
}"
`;

exports[`expression compiler function call 3`] = `
"function anonymous(getValue,fns
) {
// =sum(1,,2)
let _1 = fns['SUM'](1,\\"\\",2)
return _1;
}"
`;

exports[`expression compiler read some values and functions 1`] = `
"function anonymous(getValue,fns
) {
// =A1 + sum(A2:C3)
let _2 = getValue('A1')
let _4 = fns.range('A2', 'C3');
let _3 = fns['SUM'](_4)
let _1 = fns['ADD'](_2, _3)
return _1;
}"
`;

exports[`expression compiler simple values 1`] = `
"function anonymous(getValue,fns
) {
// =1
return 1;
}"
`;

exports[`expression compiler simple values 2`] = `
"function anonymous(getValue,fns
) {
// =true
return true;
}"
`;

exports[`expression compiler simple values 3`] = `
"function anonymous(getValue,fns
) {
// =\\"abc\\"
return \\"abc\\";
}"
`;

exports[`expression compiler some arithmetic expressions 1`] = `
"function anonymous(getValue,fns
) {
// =1 + 3
let _1 = fns['ADD'](1, 3)
return _1;
}"
`;

exports[`expression compiler some arithmetic expressions 2`] = `
"function anonymous(getValue,fns
) {
// =2 * 3
let _1 = fns['MULTIPLY'](2, 3)
return _1;
}"
`;

exports[`expression compiler some arithmetic expressions 3`] = `
"function anonymous(getValue,fns
) {
// =2 - 3
let _1 = fns['MINUS'](2, 3)
return _1;
}"
`;

exports[`expression compiler some arithmetic expressions 4`] = `
"function anonymous(getValue,fns
) {
// =2 / 3
let _1 = fns['DIVIDE'](2, 3)
return _1;
}"
`;

exports[`expression compiler some arithmetic expressions 5`] = `
"function anonymous(getValue,fns
) {
// =-3
let _1 = fns['UMINUS']( 3)
return _1;
}"
`;

exports[`expression compiler some arithmetic expressions 6`] = `
"function anonymous(getValue,fns
) {
// =(3 + 1) * (-1 + 4)
let _2 = fns['ADD'](3, 1)
let _4 = fns['UMINUS']( 1)
let _3 = fns['ADD'](_4, 4)
let _1 = fns['MULTIPLY'](_2, _3)
return _1;
}"
`;
